Import of ZOFFIX/App-ZofCMS-Plugin-Debug-Validator-HTML-0.0102 from CPAN.
gitpan-cpan-distribution: App-ZofCMS-Plugin-Debug-Validator-HTML
gitpan-cpan-version:      0.0102
gitpan-cpan-path:         ZOFFIX/App-ZofCMS-Plugin-Debug-Validator-HTML-0.0102.tar.gz
gitpan-cpan-author:       ZOFFIX
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for App-ZofCMS-Plugin-Debug-Validator-HTML
 
+0.0102  November 7, 2008
+        Added some pretty styles as well as the "validate" link
+
 0.0101  November 6, 2008
         First version, released on an unsuspecting world.
 
