Import of ZOFFIX/App-ZofCMS-Plugin-Debug-Validator-HTML-0.0103 from CPAN.
gitpan-cpan-distribution: App-ZofCMS-Plugin-Debug-Validator-HTML
gitpan-cpan-version:      0.0103
gitpan-cpan-path:         ZOFFIX/App-ZofCMS-Plugin-Debug-Validator-HTML-0.0103.tar.gz
gitpan-cpan-author:       ZOFFIX
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 App-ZofCMS-Plugin-Debug-Validator-HTML
 
-The module is a B<debugging> plugin for L<App::ZofCMS> that provides means to validate the HTML
-code that you are writing on the spot.
+The module is a B<debugging> plugin for L<App::ZofCMS> that provides
+means to validate the HTML code that you are writing on the spot.
 
 INSTALLATION
 
