--- a/Changes
+++ b/Changes
@@ -1,8 +1,11 @@
 Revision history for App-ZofCMS-Plugin-Debug-Validator-HTML
 
-0.0102  November 7, 2008
-        Added some pretty styles as well as the "validate" link
+0.0103  2013-11-07
+        - Minor fixes to comply with specs and Kwalitee game
 
-0.0101  November 6, 2008
-        First version, released on an unsuspecting world.
+0.0102  2008-11-07
+        - Added some pretty styles as well as the "validate" link
+
+0.0101  2008-11-06
+        - First version, released on an unsuspecting world.
 
