--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for App-ZofCMS-Plugin-Debug-Validator-HTML
 
+0.0104  2013-11-30
+        - Removed // operator to be able to support older perls
+        - Added autogeneration of README from POD
+
 0.0103  2013-11-07
         - Minor fixes to comply with specs and Kwalitee game
 
